2008-11-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* font-viewer/font-view.c (set_icon): don't leak icon_name.

	* font-viewer/ftstream-vfs.c (vfs_stream_open): don't leak
	GFile pointer.

2008-11-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* font-viewer/font-view.c (set_icon): added missing
	GFileInfo declaration.

2008-11-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Bug 561319 – Remove gnome-vfs dependency from font-viewer

	Patch from Saleem Abdulrasool <compnerd@compnerd.org>

	* font-viewer/*:
	* configure.in: Remove gnome-vfs dependency for font-viewer.

2008-11-09  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add libgnomeui back to LIBSLAB FLAGS.

2008-11-05  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.2.

==================== 2.25.1 ====================

2008-11-05  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.25.1

Sun Oct 26 19:15:22 2008  Søren Sandmann  <sandmann@redhat.com>

	* configure.in: Stop linking to the gnome libraries, except in the
	shell and in the font viewer.

2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump gnome-desktop requirement to 2.25.1

2008-10-25  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump required GTK+ version to 2.13.1

Fri Oct 24 17:17:47 2008  Søren Sandmann  <sandmann@redhat.com>

	* Get rid of a number of unnecessary gnome.h includes

	* capplets/keybindings/gnome-keybinding-properties.c: Use
	gtk_init() instead of gnome_program_init().

	* A couple of formatting fixes

Fri Oct 24 15:42:11 2008  Søren Sandmann  <sandmann@redhat.com>

	* Use gtk_show_uri() instead of gnome_help_display_desktop()

Fri Oct 24 14:44:16 2008  Søren Sandmann  <sandmann@redhat.com>

	* Use GnomeDesktopThumbnailFactory instead of
	GnomeThumbnailFactory

2008-10-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 556977 – avoid duplicate custom keybindings

	* capplets/keybindings/gnome-keybinding-properties.c: Filter